fix(landing): hide horizontal overflow to prevent scrollbar

--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -23,6 +23,7 @@ body{
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .main-wrapper{
